# incident-commander

./: ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md
docs/: ROADMAP.md
docs/adr/: 0001-staged-layered-architecture.md
src/: api.rs  domain.rs  infra.rs  lib.rs  main.rs
tests/: integration_basics.rs  integration_coverage.rs
